fix gaps

--- a/style/style.css
+++ b/style/style.css
@@ -627,6 +627,12 @@ button,
   gap: 2rem;
 }
 
+@media (max-width: 1440px) {
+  .header__wrapper {
+    gap: 1rem;
+  }
+}
+
 /* Socials (Left) */
 .header__socials {
   display: flex;
@@ -639,21 +645,21 @@ button,
   display: flex;
   align-items: center;
   flex: 1 1 auto;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .header__nav-list {
   display: flex;
   align-items: center;
-  gap: 3rem; 
+  gap: 2rem; 
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1440px) {
     .header__nav-list {
-        gap: 1.5rem;
+        gap: 1rem;
     }
 }
 
